<resources>
    <string name="app_name">Jewello Wholesale</string>
    <string name="reset">reset</string>
    <string name="settings">Settings</string>
    <string name="send_pending">Send to pending</string>
    <string name="view_pending">View pending</string>
    <string name="add_new">Add new</string>
    <string name="add_party">Add Party</string>
    <string name="update_party">Update Party</string>
    <string name="please_fill">Please fill all fields</string>
    <string name="item_name">Item Name</string>
    <string name="purity_rate">Purity Rate (%)</string>
    <string name="bill_estimation_app">Jewellery Wholesale Bill Estimation Application</string>
    <string name="edit_name">Business Name</string>
    <string name="setup_warning">* You can change it later</string>
    <string name="edit_number">Phone Number</string>
    <string name="get_started">Get Started</string>
    <string name="login">LogIN</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="customer_name">Customer Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="gold_rcv">Gold Received</string>
    <string name="cash_rcv">Cash Received</string>
    <string name="due_gold">Due Gold</string>
    <string name="due_cash">Due Amount</string>
    <string name="new_bill">New Bill</string>
    <string name="save">Save</string>
    <string name="calculate">Calculate</string>
    <string name="delete_party">Delete Party</string>
    <string name="party_name_or">Party name or number</string>
    <string name="bhav">Bhav</string>
    <string name="bill_not_found">Bill Not Found</string>
    <string name="print">Print</string>
    <string name="today_sale">Today\'s Sale</string>
    <string name="month_wise">Month Wise</string>
    <string name="party_wise">Party Wise</string>
    <string name="gold">Gold</string>
    <string name="cash">Cash</string>
    <string name="total_sale">Total Sale</string>
    <string name="printer_name">Printer Name: </string>
    <string name="test_print">Test Print</string>
    <string name="delete_item">Delete Item</string>
    <string name="clear">CLEAR</string>
    <string name="party_name">Party Name</string>
    <string name="delete">Delete</string>
    <string name="empty_list">No Data Found!</string>
    <string name="total">Total</string>
    <string name="bold">Bold</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="text">Text</string>
    <string name="view_bill">View Bills</string>
    <string name="gold_received">Gold Received</string>
    <string name="total_gold_received">Total Gold Received</string>
    <string name="last_balance">Fine Balance</string>
    <string name="last_balance2">Cash Balance</string>
    <string name="zero">0</string>
    <string name="expanded">Expanded</string>
    <string name="print_sample">Print Sample</string>
    <string name="edit_bill">Edit Bill</string>
    <string name="fine_gold">Fine Gold</string>
    <string name="stock_sold">Stock Sold</string>
    <string name="stone">Stone</string>
    <string name="stone_item">Stone Item</string>
</resources>