<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/today_sale"
        android:id="@+id/sales"
        app:showAsAction="always"
        android:checkable="true"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_cash"
        />

    <item
        android:title="@string/expanded"
        android:id="@+id/expanded"
        app:showAsAction="always"
        android:checkable="true"
        android:icon="@drawable/outline_expand_24"
        />

    <item
        android:id="@+id/receipt"
        android:title="@string/reset"
        android:icon="@drawable/ic_receipt"
        app:showAsAction="always"
        >
    </item>
    <item
        android:id="@+id/reset"
        android:title="@string/print_sample"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"
        >
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        >
    </item>


</menu>