<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="printerName"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".print.PrintActivity">

        <TextView
            android:id="@+id/printer_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/printer_name"
            android:textColor="@color/black"
            android:textSize="@dimen/large"
            android:layout_margin="10dp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/printer_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/printer_name_label"
            android:text="@={printerName}"
            />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/printer_name_label"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/test_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/printer_name_label"
            app:layout_constraintStart_toEndOf="@id/save_btn"
            android:layout_margin="10dp"
            android:text="@string/test_print"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>