<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.s3enterprises.jewellowholesale.billing.BillingViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                />

            <ScrollView
                android:id="@+id/scroll_panel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                >
                <com.s3enterprises.jewellowholesale.customViews.BillingPanelView
                    android:id="@+id/billing_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </ScrollView>

        </LinearLayout>

        <GridLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:useDefaultMargins="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:enabled="@{!model.isLoading}"
                />

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:backgroundTint="@color/off_black"
                android:onClick="@{()->model.calculate()}"
                />

            <Button
                android:id="@+id/btn_print"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print"
                android:onClick="@{()->model.calculate()}"
                android:visibility="@{model.billNo!=0?View.VISIBLE:View.INVISIBLE}"
                />


            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:visibility="@{model.billNo!=0?View.VISIBLE:View.INVISIBLE}"
                android:backgroundTint="@android:color/holo_red_light"
                android:enabled="@{!model.isLoading}"
                />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>