<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.s3enterprises.jewellowholesale.authentication.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@mipmap/ic_launcher"
                android:padding="20dp"
                android:layout_weight=".3"
                />


            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_estimation_app"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="22sp"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".7"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isLogin||viewModel.isOTP?View.GONE:View.VISIBLE}"
                    tools:visibility="gone"
                    >


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_name"
                        app:startIconDrawable="@drawable/ic_bussiness"
                        android:paddingStart="10dp"
                        app:startIconTint="@color/purple_500"
                        android:paddingEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/business_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textPersonName"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/setup_warning"
                        android:textColor="@android:color/holo_red_dark"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/number_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_number"
                        app:startIconDrawable="@drawable/ic_phone"
                        android:paddingStart="10dp"
                        app:startIconTint="@color/purple_500"
                        android:paddingEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textPersonName"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="3dp"
                        android:layout_marginTop="20dp"
                        app:cardElevation="3dp"
                        >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get_started"
                            android:textColor="@color/white"
                            android:background="@color/purple_700"
                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="getStarted"
                            />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isLogin?View.VISIBLE:View.GONE}"
                    tools:visibility="gone"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_number"
                        app:startIconDrawable="@drawable/ic_phone"
                        android:paddingStart="10dp"
                        app:startIconTint="@color/purple_500"
                        android:paddingEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:inputType="textPersonName"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="3dp"
                        android:layout_marginTop="20dp"
                        app:cardElevation="3dp"
                        >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:background="@color/purple_700"
                            android:clickable="true"
                            android:focusable="true"
                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:visibility="@{viewModel.isOTP?View.VISIBLE:View.GONE}"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_otp"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:fontFamily="serif"
                        android:textStyle="bold"
                        android:textColor="@color/purple_500"
                        />

                    <com.s3enterprises.jewellowholesale.customViews.OTPView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:digits="1234567890"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textIsSelectable="false"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Resend OTP"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold"
                        android:padding="5dp"
                        />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="3dp"
                        android:layout_marginTop="20dp"
                        app:cardElevation="3dp"
                        >

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:background="@color/purple_700"
                            android:clickable="true"
                            android:focusable="true"
                            />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/change_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.isLogin?`Create a new account`:`Already have an account, Login`}"
                tools:text="Already have an account, Login"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:padding="10dp"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
