<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="com.s3enterprises.jewellowholesale.Utils"/>
        <variable
            name="viewModel"
            type="com.s3enterprises.jewellowholesale.sales.SalesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/month_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@{Utils.getDate(viewModel.date)}"
            android:textColor="@android:color/white"
            tools:text="january"
            android:backgroundTint="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month_picker"
            tools:context=".sales.SalesActivity"
            android:layout_marginStart="30dp"
            >


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/gold_ic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@id/cash_ic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_gold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cash_ic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@id/total_ic"
                app:layout_constraintStart_toEndOf="@id/gold_ic"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cash" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/total_ic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cash_ic"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_total_sale" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/gold"
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/gold_ic"
                app:layout_constraintStart_toStartOf="@id/gold_ic"
                app:layout_constraintTop_toBottomOf="@id/gold_ic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/cash"
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cash_ic"
                app:layout_constraintStart_toStartOf="@id/cash_ic"
                app:layout_constraintTop_toBottomOf="@id/cash_ic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/total_sale"
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/total_ic"
                app:layout_constraintStart_toStartOf="@id/total_ic"
                app:layout_constraintTop_toBottomOf="@id/total_ic" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
